# $Id$

include $(top_srcdir)/Makefile.am.common

if OTP
dir_otp = otp
endif
SUBDIRS = 					\
	  afsutil				\
	  ftp					\
	  login					\
	  $(dir_otp)				\
	  popper				\
	  push					\
	  rsh					\
	  su					\
	  xnlock				\
	  telnet				\
	  test					\
	  kx					\
	  kf					\
	  $(APPL_dce)
	  # kauth
